fix: fixed visibility menu-button

--- a/css/style.css
+++ b/css/style.css
@@ -367,13 +367,13 @@ template {
   padding-bottom: 40px;
 }
 
+.navbar-top__menu-button {
+  display: none;
+}
+
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
-}
-
-.navbar__menu-button {
-  display: none;
 }
 
 .navbar-bottom {
@@ -497,6 +497,7 @@ template {
     width: 16px;
     height: 11px;
     display: flex;
+    padding: 0;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
